src/test/deca/syntax/invalid/sansObjets/invalidIdentifierName.deca
// Description:
//    tests de programme incorrect lexicalement (nom de variable invalide)
//
// Historique:
//    @DATE@

{
    int y = 7, 0invalid;
}